=== HEAD

* Integrate many_to_one_pk_lookup and association_autoreloading plugins into main associations plugin (jeremyevans)

* Make defaults_setter plugin operate in a lazy manner (jeremyevans)

* Plugins now extend the model class with ClassMethods before including InstanceMethods (jeremyevans)

* Remove Model::EMPTY_INSTANCE_VARIABLES (jeremyevans)

* Model.raise_on_typecast_failure now defaults to false (jeremyevans)

* Model#_save private method now only takes a single argument (jeremyevans)

* Remove Dataset#columns_without_introspection from columns_introspection extension (jeremyevans)

* Make boolean prepared statement arguments work on sqlite adapter when integer_booleans is true (jeremyevans)

* SQLite now defaults to true for integer_booleans and false for use_timestamp_timezones (jeremyevans)

* Remove Sequel::NotImplemented exception (jeremyevans)

* Automatically alias single expressions in Dataset#get, #select_map, and #select_order_map, to work around possible DoS issues (jeremyevans)

* Default to deep qualification when joining (jeremyevans)

* Use a connection queue instead of stack by default for threaded connection pools (jeremyevans)

* Remove SQL::SQLArray alias for SQL::ValueList (jeremyevans)

* Remove SQL::NoBooleanInputMethods empty module (jeremyevans)

=== 3.48.0 (2013-06-01)

* Make named_timezones extension usable by databases allowing timezone strings to be given to Database#timezone= (jeremyevans)

* Make Dataset#or just clone if given an empty argument (jeremyevans)

* Deprecated using a mismatched number of placeholders and arguments in a placeholder literal string (jeremyevans)

* Add Dataset#qualify_to and #qualify_to_first_source to sequel_3_dataset_methods extension (jeremyevans)

* Add scissors plugin for Model.update, .delete, and .destroy (jeremyevans)

* Validate against explicit nil values in NOT NULL columns with default values in the auto_validations plugin (jeremyevans)
